# Rubiks_Cube_solver

./: CMakeLists.txt  README.md
src/cube/: Moves.cpp  Moves.h
src/search/: Heuristic.cpp  IDAStar.cpp  IDAStar.h  IDDFS.cpp  IDDFS.h  MoveGenerator.cpp  MoveGenerator.h  SearchStats.h
src/solver/: SolveResult.h  Solver.cpp
